--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,9 +28,9 @@ a {
 	margin-left: 0.6rem;
 }
 
-.melvin-kisten {
+.Saurabh_Shrestha {
 	color: #000;
-	margin-right: 0.4rem;
+	margin-right: 0.3rem;
 }
 
 /* carousel */
